[package]
name = "criu_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread", "io-util", "fs"] }
serde = { version = "*", features = ["derive"] }
serde_urlencoded = "*"
serde_json = "*"
futures = "*"
bytes = "*"
tokio-util = { version = "*", features = ["io", "codec"] }
#nix = "*"
#rand = "*"
#rustc-hash = "1.1"
#clap = { version = "*", features = ["derive"] }
#libc = "*"

