[package]
name = "criu_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
#bytes = "*"
#clap = { version = "*", features = ["derive"] }
futures = "0.3"
#rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
#serde_urlencoded = "*"
tokio = { version = "1.27", features = ["macros", "rt-multi-thread", "io-util", "fs", "process"] }
#tokio-util = { version = "*", features = ["io", "codec"] }
